# deal.ii-SFG

./: AllenCahn.h  CMakeCache.txt  CMakeLists.txt  CMakeListsExtra.txt  EquationU3V3.nb  Makefile  README.md  adaptive.cc  basic.cc  cmake_install.cmake  comparison.cc  compile_commands.json  equation.h  equation1.h  equation_nontrivial.h  equation_notime.h  extra.cc  inddim.cc  laplace-nonlinear.h  laplace.h  main.cc  main_1D.cc  main_2D.cc  nonlinear.h  nontrivial.cc  parallel.c  script.py  solution1.pvd  solutionforce.cc  step-3.cc  step-3_1D.cc  step-3_2D.cc  step-extra.cc  step-time.cc  time.cc  timeindependent.cc  vector-valued.h  wrapper.cc  wrapper.h
AceGen/: equation-1D.h  equation-2D.h  equation-3D.h  equation.h  equation_3_2D.h  script.py  wrapper.h
AceGen/1D_2omega/: DoubleDitchC1D.c  equation.h
AceGen/2D_2omega/: DoubleDitch2D_2.c  DoubleDitch2D_2.h
AceGen/2D_3omega/: equation.h  equation_2_3.c
AceGen/3D_2omega/: DoubleDitch3D_2.c  DoubleDitch3D_2.h
include/: InitialValues.h  RandomField.h  assemble_linear.h  model.h  output_results.h  parameters.h  run.cc  run.h  scratch_data.h  solve.h  time_stepping.h
mainline_code/: main_3D.cc
old_results/results/: solution-10.vtu  solution-104.vtu  solution-16.vtu  solution-17.vtu  solution-18.vtu  solution-21.vtu  solution-24.vtu  solution-29.vtu  solution-3.vtu  solution-34.vtu  solution-37.vtu  solution-39.vtu  solution-4.vtu  solution-43.vtu  solution-47.vtu  solution-52.vtu  solution-55.vtu  solution-58.vtu  solution-64.vtu  solution-66.vtu  solution-68.vtu  solution-7.vtu  solution-78.vtu  solution-84.vtu  solution-87.vtu  solution-89.vtu  solution-9.vtu  solution-91.vtu
oldcode/: basic.cc  separace.cc  solutionforce.cc  solutionforce_new.cc
results/: solution-0.vtu  solution-1.vtu  solution-10.vtu  solution-100.vtu  solution-101.vtu  solution-102.vtu  solution-103.vtu  solution-104.vtu  solution-105.vtu  solution-106.vtu  solution-107.vtu  solution-108.vtu  solution-109.vtu  solution-11.vtu  solution-110.vtu  solution-111.vtu  solution-112.vtu  solution-113.vtu  solution-114.vtu  solution-115.vtu  solution-116.vtu  solution-117.vtu  solution-118.vtu  solution-119.vtu  solution-12.vtu  solution-120.vtu  solution-121.vtu  solution-122.vtu  solution-123.vtu  solution-124.vtu  solution-125.vtu  solution-126.vtu  solution-127.vtu  solution-128.vtu  solution-129.vtu  solution-13.vtu  solution-130.vtu  solution-14.vtu  solution-15.vtu  solution-16.vtu  (+91 more)
source/Model1D_2vars/: CMakeLists.txt  InitialValues.cc  InitialValues.h  RandomField.cc  double_ditch.prm  grid_and_boundary.h  model.cc
src/: Boundary+RHS  postprocess.cc
working/: RandomField.cc  RandomField.h
(+20 files in other folders)
